# speech-agent

./: .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent_scripts/: agent.py  update_agents.prompt.txt
config/: dev_system_prompt.json  system_prompt.json  user_system_prompt.json
config/nginx/: configure-nginx-speech.reb00t.io.sh  speech.reb00t.io.conf
docs/: app_docs.md  dev_docs.md  dual_llm_spec.md  memorizer_integration.md  rasa_agents.md  speech_mode_detailed_spec.md  speech_mode_spec.md  user_docs.md
scripts/: build.sh  ci_state.py  deploy.sh  get_logs.sh  init.sh  venv.rc
src/: asr.py  audio_chunking.py  audio_recording.py  documents.py  dual_llm.py  home_control.py  llm_engine.py  main.py  memory.py  plugins.py  runtime_logs.py  speech.py  streaming.py  tool_executor.py  tool_schemas.py  tts.py  tts_server.py  web_tools.py
src/static/chat/: chat.js  pcm-processor.js  speech.js
src/templates/: index.html  login.html
test/: e2e.sh  test_asr.py  test_audio_chunking.py  test_dual_llm.py  test_e2e_real_backend.py  test_e2e_speech.py  test_e2e_tts.py  test_home_control.py  test_llm_engine.py  test_main.py  test_memory.py  test_plugins.py  test_speech.py  test_tts.py  test_tts_integration.py
