[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-agent"
version = "0.1.0"
description = "TODO."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Marko Rosenmüller" }]
keywords = []
dependencies = [
  "aiohttp>=3.11",
  "beautifulsoup4>=4.12",
  "quart>=0.20",
  "uvicorn==0.40.0",
  "httpx>=0.28",
  "markdown>=3.5",
  "fpdf2>=2.7",
]

[project.scripts]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
  "prompt-toolkit>=3.0",
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
]
tts = [
  "flask>=3.0",
  "numpy>=1.26",
  "torch>=2.0",
  "nemo_toolkit>=2.0",
  "librosa>=0.10",
  "matplotlib>=3.0",
  "hydra-core>=1.3",
  "lightning>=2.0",
  "fiddle>=0.3",
  "cloudpickle>=3.0",
  "datasets>=4.0",
  "pyannote.core>=6.0",
  "pyannote.metrics>=4.0",
  "pypinyin-dict>=0.9",
  "pyopenjtalk>=0.4",
  "editdistance>=0.8",
  "einops>=0.8",
  "g2p_en>=2.1",
  "jiwer>=4.0",
  "jieba>=0.42",
  "lhotse>=1.0",
  "sentencepiece>=0.2",
  "transformers>=5.0",
  "webdataset>=1.0",
  "IPython>=9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
